fix: Adjust font size of post links for better readability

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -242,7 +242,7 @@
 
 .post-link {
     display: block;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: $font-semibold;
     color: var(--text-normal);
     line-height: 1.3;
